@@ -2728,10 +2728,10 @@ def generate(env):
         assert d == 'Dir(bardir_bardir)', d
 
         d = env.Dir(['dir1'])
-        assert d == 'Dir(dir1)', d
+        assert d == ['Dir(dir1)'], d
 
         d = env.Dir(['dir1', 'dir2'])
-        assert d == 'Dir(dir1 dir2)', d
+        assert d == ['Dir(dir1)', 'Dir(dir2)'], d
 
     def test_NoClean(self):
         """Test the NoClean() method"""
@@ -2805,10 +2805,10 @@ def generate(env):
         assert e == 'Entry(barentry_barentry)', e
 
         e = env.Entry(['entry1'])
-        assert e == 'Entry(entry1)', e
+        assert e == ['Entry(entry1)'], e
 
         e = env.Entry(['entry1', 'entry2'])
-        assert e == 'Entry(entry1 entry2)', e
+        assert e == ['Entry(entry1)', 'Entry(entry2)'], e
 
     def test_File(self):
         """Test the File() method"""
@@ -2829,10 +2829,10 @@ def generate(env):
         assert f == 'File(barfile_barfile)', f
 
         f = env.File(['file1'])
-        assert f == 'File(file1)', f
+        assert f == ['File(file1)'], f
 
         f = env.File(['file1', 'file2'])
-        assert f == 'File(file1 file2)', f
+        assert f == ['File(file1)', 'File(file2)'], f
 
     def test_FindFile(self):
         """Test the FindFile() method"""
